Add pinephone support
Signed-off-by: Abdel Benamrouche <abdel@unxp.fr>
Rebased by: Nicholas Hebert <n-hebert[at]outlook[dot]com>

--- a/hw/arm/Kconfig
+++ b/hw/arm/Kconfig
@@ -40,6 +40,10 @@ config CUBIEBOARD
     bool
     select ALLWINNER_A10
 
+config PINEPHONE
+    bool
+    select ALLWINNER_A64
+
 config DIGIC
     bool
     select PTIMER
@@ -312,6 +316,14 @@ config ARM_V7M
     default y if TCG && (ARM || AARCH64)
     select PTIMER
     select ARM_COMPATIBLE_SEMIHOSTING
+
+config ALLWINNER_A64
+    bool
+	select ALLWINNER_A10_PIT
+    select SERIAL
+	select ARM_TIMER
+	select ARM_GIC
+	select UNIMP
 
 config ALLWINNER_A10
     bool
